--- a/client/src/pages/availablePlans/plansView.css
+++ b/client/src/pages/availablePlans/plansView.css
@@ -4,19 +4,30 @@
   padding: 2rem;
 }
 
+.paginationFilters{
+  display: flex;
+  flex-direction: column;
+  border: 3px red solid;
+  gap: 16px;
+  background-color: var(--Fondo-1)
+}
+
 .filters {
   display: flex;
   flex-direction: row;
   gap: 1rem;
   margin-bottom: 2rem;
   position: relative;
-  justify-content: flex-end;
+  justify-content: space-between;
+  padding-right: 100px;
+  padding-left: 100px;
+  margin-bottom: 8px;
 }
 
 .filter-select {
   background-color: transparent;
   color: var(--color-text);
-  border: 1px solid #333;
+  border: 1px solid var(--Primario);
   padding: 0.5rem 1rem;
   border-radius: 4px;
   min-width: 150px;
@@ -129,15 +140,13 @@
   left: 60%;
 }
 
-.pagination-container {
-  display: flex;
-  justify-content: center;
-  margin: 2rem 0;
-}
+
 
 .pagination {
   display: flex;
   gap: 0.5rem;
+  justify-content:center;
+  margin-top: 8px
 }
 
 .pagination-button {
@@ -152,7 +161,7 @@
 
 .pagination-button.active {
   background-color: var(--Secundario);
-  color: var(--color-card);
+  color: black;
   border-color: var(--color-accent);
 }
 
