--- a/client/src/pages/availablePlans/plansView.css
+++ b/client/src/pages/availablePlans/plansView.css
@@ -2,14 +2,20 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem;
+  background-color: var(--Fondo-1);
+}
+.content-personalizations {
+  background-color: var(--Fondo-2);
+  border-radius: 15px;
+  padding: 16px 32px;
 }
 
-.paginationFilters{
+.paginationFilters {
   display: flex;
   flex-direction: column;
-  border: 3px red solid;
   gap: 16px;
-  background-color: var(--Fondo-1)
+  background-color: var(--Fondo-1);
+  padding-block: 16px 20px;
 }
 
 .filters {
@@ -43,10 +49,10 @@
 }
 
 .personalization {
-  background-color: var(--color-card);
+  background-color: var(--Fondo-1);
   padding: 2rem;
   border-radius: 8px;
-  margin: 2rem 0;
+  margin: 2rem 182px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -62,7 +68,7 @@
   color: var(--color-text-secondary);
   margin-bottom: 1.5rem;
   text-align: left;
-  width: 50%;
+  width: 90%;
 }
 
 .simulate-button {
@@ -140,13 +146,11 @@
   left: 60%;
 }
 
-
-
 .pagination {
   display: flex;
   gap: 0.5rem;
-  justify-content:center;
-  margin-top: 8px
+  justify-content: center;
+  margin-top: 8px;
 }
 
 .pagination-button {
