--- a/client/src/components/plan-documents/planDocument.module.css
+++ b/client/src/components/plan-documents/planDocument.module.css
@@ -1,5 +1,4 @@
 .content {
-  background-color: #1a1d24;
   color: #ffffff;
   padding: 2rem;
   min-height: 100vh;
@@ -21,7 +20,7 @@
 .introductiontext {
   width: 90%;
   text-align: justify;
-  color: var(--Secundario);
+  color: var(--Terciario-80);
   font-size: 1.8vh;
 }
 .datacontainer {
@@ -47,14 +46,14 @@
   justify-content: center;
 }
 .buttonnext {
-  border: 2px solid var(--Primario-80);
+  border: 2px solid var(--Primario);
   background-color: transparent;
-  color: var(--Primario-80);
+  color: var(--Primario);
   padding: 0.5em;
 }
 .buttonnext:hover {
-  border: 2px solid var(--Primario);
-  color: var(--Primario);
+  border: 2px solid var(--Primario-80);
+  color: var(--Primario-80);
 }
 .buttoncontainer {
   display: flex;
