--- a/client/src/components/sidebar-buyer/sidebarBuyer.module.css
+++ b/client/src/components/sidebar-buyer/sidebarBuyer.module.css
@@ -25,7 +25,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  gap: 3em;
+  gap: 20px;
   margin-top: 5em;
 }
 .sidebarButtons {
