--- a/client/src/pages/landing/landing.css
+++ b/client/src/pages/landing/landing.css
@@ -106,7 +106,7 @@
   }
 
   #landing #smartInv #smartInvAside #investText {
-    text-align: justify;
+    text-align: left;
     font-size: 1.8vh;
     color: var(--Texto);
   }
@@ -501,7 +501,7 @@
   }
 
   #landing #finanDream #finanDreamAside #yourDreamText {
-    text-align: justify;
+    text-align: left;
     font-size: 1.8vh;
     color: var(--Texto);
     width: 100%;
